objects/ssot__CaseMilestone__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActualElapsedTimeInDays__c</fullName>
        <label>Actual Elapsed Time In Days</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ActualElapsedTimeInHours__c</fullName>
        <label>Actual Elapsed Time In Hours</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ActualElapsedTimeInMinutes__c</fullName>
        <label>Actual Elapsed Time In Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CaseId__c</fullName>
        <label>Case</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseMilestoneTypeId__c</fullName>
        <label>Case Milestone Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseMilestone_CaseId_map_Case_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseMilestone_CaseId_map_Case_Id_N_1</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>CaseMilestone_CaseId_map_Case_Id_N_1</relationshipLabel>
        <relationshipName>CaseMilestone_CaseId_map_Case_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__CompletionDateTime__c</fullName>
        <label>Completion Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ElapsedTimeInDays__c</fullName>
        <label>Elapsed Time In Days</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ElapsedTimeInHours__c</fullName>
        <label>Elapsed Time In Hours</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ElapsedTimeInMinutes__c</fullName>
        <label>Elapsed Time In Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Case Milestone Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsViolated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Violated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OperatingHoursId__c</fullName>
        <label>Operating Hours</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__StoppedTimeInDays__c</fullName>
        <label>Stopped Time In Days</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__StoppedTimeInHours__c</fullName>
        <label>Stopped Time In Hours</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__StoppedTimeInMinutes__c</fullName>
        <label>Stopped Time In Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SystemModstamp__c</fullName>
        <label>System Modified Stamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TargetDateTime__c</fullName>
        <label>Target Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TargetResponseInDays__c</fullName>
        <label>Target Response In Days</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TargetResponseInHours__c</fullName>
        <label>Target Response In Hours</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TargetResponseInMinutes__c</fullName>
        <label>Target Response In Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TimeRemainingInDays__c</fullName>
        <label>Time Remaining In Days</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TimeRemainingInHoursText__c</fullName>
        <label>[DoNotUse]Time Remaining In Hour</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TimeRemainingInHours__c</fullName>
        <label>[DoNotUse]Time Remaining In Hours</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TimeRemainingInMinutesText__c</fullName>
        <label>Time Remaining In Minutes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TimeRemainingInMinutes__c</fullName>
        <label>[DoNotUse]Time Remaining In Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TimeRmnInHoursText__c</fullName>
        <label>Time Remaining In Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TimeSinceTargetInDays__c</fullName>
        <label>Time Since Target In Days</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TimeSinceTargetInHoursText__c</fullName>
        <label>Time Since Target In Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TimeSinceTargetInHours__c</fullName>
        <label>[DoNotUse]Time Since Target In Hours</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TimeSinceTargetInMinutesText__c</fullName>
        <label>Time Since Target In Minutes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TimeSinceTargetInMinutes__c</fullName>
        <label>[DoNotUse]Time Since Target In Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1725593376762_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseMilestone_CaseMilestoneTypeId_ma_rel</label>
        <referenceTo>ssot__CaseMilestoneType__dlm</referenceTo>
        <relationshipLabel>CaseMilestone_CaseMilestoneTypeId_ma_rel</relationshipLabel>
        <relationshipName>rel_1725593376762_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1725593389209_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseMilestone_OperatingHoursId_map_O_rel</label>
        <referenceTo>ssot__OperatingHours__dlm</referenceTo>
        <relationshipLabel>CaseMilestone_OperatingHoursId_map_O_rel</relationshipLabel>
        <relationshipName>rel_1725593389209_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1725593402276_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseMilestone_CreatedById_map_User_I_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>CaseMilestone_CreatedById_map_User_I_rel</relationshipLabel>
        <relationshipName>rel_1725593402276_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>